<resources>
    <string name="app_name">Queue Estimator</string>

    <string name="title_activity_home_screen">Queue Estimator</string>
    <string name="title_activity_choose_place">Choose Placer</string>
    <string name="title_activity_choose_device">Choose Device</string>
    <string name="title_activity_messages">Messaging Wall</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="enter_button">Enter</string>
    <string name="start_button">Start\nQueuing</string>
    <string name="stop_button">Stop\nQueuing</string>
    <string name="exit_button">Exit</string>
    <string name="messages_create_message">Post a message</string>
    <string name="messages_alias">Alias</string>
    <string name="messages_message">Message</string>
    <string name="messages_duration">Message will disappear in:</string>
    <string name="messages_minutes">minutes</string>
    <string name="messages_send_button">Post Message</string>
    <string name="home_messages_wall_btn">Messages Wall</string>
    <string name="home_map_btn">View Map</string>

    <string name="aware_activate_accessibility">Activate Queue Estimator in Accessibility Services.</string>

    <string name="join_study">Join Study</string>
    <string name="quit_study">Quit Study</string>


</resources>
