<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fi.oulu.comag.queueestimatortrigger.HomeScreen"
    android:theme="@android:style/Theme">

    <RelativeLayout
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:background="@color/primary_text_default_material_light"
        >
        <TextView
            android:id="@+id/messages_title"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/title_activity_home_screen"
            android:textColor="@android:color/white"
            android:layout_marginBottom="15dp"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <ImageButton
            android:id="@+id/quit_menu"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_overflow"
            android:tint="@android:color/white"/>
    </RelativeLayout>

    <Button
        android:id="@+id/home_map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_title"
        android:text="@string/home_map_btn"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/home_messages_wall_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_map_btn"
        android:text="@string/home_messages_wall_btn"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_messages_wall_btn"
        android:orientation="vertical"
        >

    <RelativeLayout
        android:id="@+id/home_start_stop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/home_trigger_start_stop_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:src="@drawable/trigger_button_start"
            android:scaleType="centerInside"
            android:enabled="false" />
        <TextView
            android:id="@+id/home_text_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:background="@android:color/transparent"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/home_enter_exit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        >
        <ImageButton
            android:id="@+id/home_trigger_enter_exit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:src="@drawable/trigger_button_start"
            android:enabled="false"/>
        <TextView
            android:id="@+id/home_text_enter_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_button"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            />
        <ProgressBar
            android:id="@+id/home_progress_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            style="?android:attr/spinnerItemStyle"/>
    </RelativeLayout>


    </LinearLayout>



</RelativeLayout>
