<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/messages_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_messages"
        android:layout_marginBottom="15dp"
        android:textAppearance="@android:style/TextAppearance.Large"/>
    <LinearLayout
        android:id="@+id/messages_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:id="@+id/top_shadow"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/top_shadow"
            android:layout_marginBottom="-5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background"
            >
            <LinearLayout
                android:id="@+id/messages_title_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:clickable="true">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:text="@string/messages_create_message"/>
                    <ImageButton
                        android:id="@+id/messages_hide_show_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_expand_more_black_48dp"
                        android:tint="@color/gray"
                        android:background="@android:color/transparent"
                        />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/messages_bottom_rest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/messages_alias"/>
                        <EditText
                            android:id="@+id/messages_alias"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:maxLength="@integer/messages_max_chars_alias"
                            android:hint="Anonymous"
                            android:nextFocusDown="@+id/messages_duration"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/messages_duration"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:id="@+id/messages_duration"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:maxLength="4"
                                android:inputType="number"
                                android:layout_marginRight="5dp"
                                android:hint="40"
                                android:gravity="center"
                                android:nextFocusDown="@+id/messages_message"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/messages_minutes"
                                android:layout_marginLeft="5dp"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messages_message"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <EditText
                        android:id="@+id/messages_message"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:maxLength="@integer/messages_max_chars_message"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionSend"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        />
                    <ImageButton
                        android:id="@+id/messages_post_btn"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/send_button"
                        android:background="@android:color/transparent"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/messages_list"
        android:layout_below="@id/messages_title"
        android:layout_above="@id/messages_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/messages_empty"
        android:layout_below="@id/messages_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Widget.TextView.SpinnerItem"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/messages_no_messages"
        android:layout_below="@id/messages_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="No messages. Do you want to post one?"
        android:textSize="18sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />


</RelativeLayout>